--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     			<div class="col-md-12">
 		         	<div class="menu">
 		         		<div class="logo">
-		         			<div class="logo-text">www.PinoyHub.us</div>
+		         			<div class="logo-text">Pinoy-Hub.com</div>
 		         		</div>
 		         	</div>
 		        </div>
